--- a/index.html
+++ b/index.html
@@ -18,35 +18,36 @@
                     NIKE
                 </legend>
             </picture>
-            <article>
             <h1>
                 Desenvolvedor de Sistemas
             </h1>
-            </article>
-            <article>
-                <p>
-                    Clique aqui para ter mais informações
-                </p>
-                <a href="https://iplis.ru/meu-portifolio">
-                    <button type="button" id="ixd01">
-                        Portifolio
-                    </button>
-                </a>
-            </article>
         </section>
-    </main>
-    <footer>
-        <article>
+
+        <aside>
             <h1>
                 <strong>
                     Aguardo ancioso para um entrevista.
                 </strong>
             </h1>
             <p>
+                Clique aqui para ter mais informações
+            </p>
+            <button type="button" id="ixd01">
+                <a href="https://iplis.ru/meu-portifolio">
+                    Portifolio
+                </a>
+            </button>
+        </aside>
+    </main>
+
+    <footer>
+        <section>
+            <p>
                 Desenvolvido por <a href="https://www.instagram.com/euu_pabloo/">Nike</a> usando linguagens de marcação
                 para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
                     Digitais</a>
             </p>
+        </section>
     </footer>
 </body>
 
