--- a/index.html
+++ b/index.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="en">
+
 <head>
-    <meta charset=" UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
-<title>Portifolio</title>
-</head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Portifolio</title>
+    </head>
 
 <body>
     <main>
+        <div class="flex">
+            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                <img src="digital.png" alt="digital">
+            </a>
+            <a href="https://iplis.ru/meu-portifolio">
+                <button type="button" style="float: right; " id="ixd01">
+                    Portifolio
+                </button>
+            </a>
+
+        </div>
+        <legend style="float: right;">
+            NIKE
+        </legend>
+        <h1>
+            PK DIGITAL PRODUCTS
+        </h1>
         <section>
             <h1 style="margin-bottom: 50px;">
                 Desenvolvedor de Sistemas
             </h1>
-            <picture id="digital">
-                <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                    <img src="digital.png" alt="digital">
-                </a>
-                <legend>
-                    NIKE
-                </legend>
-            </picture>
         </section>
-<section>
-    <h1>
-        Opah
-    </h1>
-    <h2>
-        aqui você vai encontrar um grupo de desenvolvedores que atuam principalmente com a venda e revenda de scripts.
-    </h2>
-</section>
+        <i class="fa-brands fa-codepen"></i>
+        <p>
+            ATENÇÃO !
+        </p> 
+        <h1>
+            Aqui você vai encontrar um grupo de desenvolvedores que atuam principalmente com a venda e revenda de
+            scripts.
+        </h1>
+        <section>
+            <h1>
+                Opah
+            </h1>           
+                        <p>
+                Normalmente, com ênfase no front-end, realizamos serviços na WEB (VENDA DE SITES, PLATAFORMAS
+                PARA
+                CRM, LANDING PAGE etc.). Usamos ferramentas primitivas de computação e uma mistura de engenharia
+                social.
+            </p>
+        </section>
         <aside>
             <h1>
                 <strong>
@@ -39,14 +64,13 @@
             <p>
                 Clique aqui para ter mais informações
             </p>
-            <button type="button" id="ixd01">
-                <a href="https://iplis.ru/meu-portifolio">
-                    Portifolio
-                </a>
-            </button>
         </aside>
-<div class="iframe" style="display: flex; align-items: center; justify-content: center;">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true" width="640" height="2500" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>   </main>
+        <div class="iframe" style="display: flex; align-items: center; justify-content: center;">
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
+                width="640" height="2500" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+        </div>
+    </main>
 
     <footer>
         <section>
