--- a/index.html
+++ b/index.html
@@ -14,57 +14,55 @@
 
 <body>
     <main>
-        <div class="flex">
-            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <img src="digital.png" alt="digital">
-            </a>
-            <a href="https://iplis.ru/meu-portifolio">
-                <button type="button" style="float: right; " id="ixd01">
-                    Portifolio
-                </button>
-            </a>
-
-        </div>
-        <legend style="float: right;">
-            NIKE
-        </legend>
         <h1>
             PK DIGITAL PRODUCTS
         </h1>
+   
+        <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
+            <img src="digital.png" alt="digital">
+        </a>
+        <legend>
+            NIKE
+        </legend>
         <section>
+            <p>
+                Clique
+                <button type="button" id="ixd01">
+                    <a href="https://iplis.ru/meu-portifolio">
+                        aqui
+                    </a>
+                </button>
+                para ter mais informações
+            </p>
+
+
             <h1 style="margin-bottom: 50px;">
                 Desenvolvedor de Sistemas
             </h1>
-        </section>
-        <i class="fa-brands fa-codepen"></i>
-        <p>
-            ATENÇÃO !
-        </p> 
-        <h1>
-            Aqui você vai encontrar um grupo de desenvolvedores que atuam principalmente com a venda e revenda de
-            scripts.
-        </h1>
-        <section>
+
+            <p>
+                ATENÇÃO !
+            </p>
+            <h1>
+                Aqui você vai encontrar um grupo de desenvolvedores que atuam principalmente com a venda e revenda de
+                scripts.
+            </h1>
             <h1>
                 Opah
-            </h1>           
-                        <p>
+            </h1>
+            <p>
                 Normalmente, com ênfase no front-end, realizamos serviços na WEB (VENDA DE SITES, PLATAFORMAS
                 PARA
                 CRM, LANDING PAGE etc.). Usamos ferramentas primitivas de computação e uma mistura de engenharia
                 social.
             </p>
-        </section>
-        <aside>
             <h1>
                 <strong>
                     Aguardo ancioso para um entrevista.
                 </strong>
             </h1>
-            <p>
-                Clique aqui para ter mais informações
-            </p>
-        </aside>
+        </section>
+
         <div class="iframe" style="display: flex; align-items: center; justify-content: center;">
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
@@ -73,13 +71,13 @@
     </main>
 
     <footer>
-        <section>
-            <p>
-                Desenvolvido por <a href="https://www.instagram.com/euu_pabloo/">Nike</a> usando linguagens de marcação
-                para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
-                    Digitais</a>
-            </p>
-        </section>
+
+        <p>
+            Desenvolvido por <a href="https://www.instagram.com/euu_pabloo/">Nike</a> usando linguagens de marcação
+            para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
+                Digitais</a>
+        </p>
+
     </footer>
 </body>
 
