--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
 <body>
     <div class="interface">
         <main>
+            <h1 style="font-size: xx-large;">
+                PK DIGITAL PRODUCTS
+            </h1>
+            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                <img src="digital.png" alt="digital">
+            </a>
+            <legend>
+                NIKE
+            </legend>
 
-            <section>
-                <h1 style="font-size: xx-large;">
-                    PK DIGITAL PRODUCTS
-                </h1>
-                <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                    <img src="digital.png" alt="digital">
-                </a>
-                <legend>
-                    NIKE
-                </legend>
-
-                <h1 style="margin-bottom: 50px;">
-                    Desenvolvedor de Sistemas
-                </h1>
+            <h1 style="margin-bottom: 50px;">
+                Desenvolvedor de Sistemas
+            </h1>
+                      <section>
+                <label style="color: rgb(255, 174, 0); font-size: x-small;">
+                    RESUMINDO
+                    (CRIAMOS PLATAFORMAS PARA
+                    INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
+                    CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+                </label>
+                                <p style="color: red;">
+                    ATENÇÃO !
+                </p>
                 <p>
                     Clique
                     <button type="button" id="ixd01">
@@ -39,11 +47,8 @@
                     </button>
                     para ter mais informações do nosso Portifolio
                 </p>
-                <p style="color: red;">
-                    ATENÇÃO !
-                </p>
                 <p>
-                    Aqui você vai encontrar um grupo de <p style="color: yellow;">Desenvolvedores, UI x UX e estrategistas de trafego organico e pago</p> atuamos principalmente com a venda e revenda
+                    Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago atuamos principalmente com a venda e revenda
                     de
                     scripts ou modelos.
                 </p>
@@ -53,12 +58,6 @@
                 <p>
                     Clique <button type="button" id="ixd01"> <a href="#form"> aqui</a></button> para acessar ao formulario de inscrição.
                                 </p>
-                <h2 style="color: rgb(255, 174, 0);">
-                    RESUMINDO
-                    (CRIAMOS PLATAFORMAS PARA
-                    INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
-                    CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
-                </h2>
                 <p>
                     Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
                     computação e uma mistura de
