--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 PK DIGITAL PRODUCTS
             </h1>
             <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <img src="digital.png" alt="digital">
+                <img style="border-radius: 15px;" src="digital.png" alt="digital">
             </a>
             <legend>
                 NIKE
@@ -28,15 +28,22 @@
             <h1 style="margin-bottom: 50px;">
                 Desenvolvedor de Sistemas
             </h1>
-                      <section>
+            <section>
                 <label style="color: rgb(255, 174, 0); font-size: x-small;">
                     RESUMINDO
                     (CRIAMOS PLATAFORMAS PARA
                     INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                     CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
                 </label>
-                                <p style="color: red;">
-                    ATENÇÃO !
+                <p style="color: red;">
+                    <strong>ATENÇÃO !</strong>
+                </p>
+                <p>
+                    Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
+                </p>
+                <p>
+                    Clique <button type="button" id="ixd01"> <a href="#form"> aqui</a></button> para acessar ao <strong
+                        style="color: gold;">formulario</strong> de inscrição.
                 </p>
                 <p>
                     Clique
@@ -45,19 +52,14 @@
                             aqui
                         </a>
                     </button>
-                    para ter mais informações do nosso Portifolio
+                    para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
                 </p>
                 <p>
-                    Aqui você vai encontrar um grupo de Desenvolvedores, UI x UX e estrategistas de trafego organico e pago atuamos principalmente com a venda e revenda
+                    Aqui você vai encontrar um grupo de <strong style="color: aquamarine;">Desenvolvedores, UI x UX</strong> e estrategistas de trafego <strong style="color: aquamarine;">organico</strong> e
+                    <strong style="color: aquamarine;">pago</strong> atuamos principalmente com a venda e revenda
                     de
                     scripts ou modelos.
                 </p>
-                <p>
-                    Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
-                </p>
-                <p>
-                    Clique <button type="button" id="ixd01"> <a href="#form"> aqui</a></button> para acessar ao formulario de inscrição.
-                                </p>
                 <p>
                     Normalmente, com ênfase no front-end, realizamos serviços na WEB. Usamos ferramentas primitivas de
                     computação e uma mistura de
@@ -71,11 +73,10 @@
                 </h1>
             </section>
 
-            <div class="iframe" style="display: flex; align-items: center; justify-content: center;">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
-                    height="2500" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-            </div>
+            <iframe
+                src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
+                frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
+
         </main>
 
         <footer>
