--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>Portifolio</title>
-    </head>
+    <link rel="stylesheet" href="style.css">
+    <title>Portifolio</title>
+</head>
 
 <body>
     <div class="interface">
         <main>
-            <h1 style="font-size: xx-large;">
-                PK DIGITAL PRODUCTS
-            </h1>
             <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
                 <img style="border-radius: 15px;" src="digital.png" alt="digital">
             </a>
             <legend>
-                NIKE
+                Eu sou o NIKE
             </legend>
 
             <h1 style="margin-bottom: 50px;">
-                Desenvolvedor de Sistemas
+                Sou fundador da PK DIGITAL PRODUCTS, empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar ideias em 
             </h1>
             <section>
                 <label style="color: rgb(255, 174, 0); font-size: x-small;">
@@ -34,6 +31,87 @@
                     INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                     CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
                 </label>
+                <h1>
+                    Segue abaixo projeto que já foram finalizados e deixamos como referência para você
+                </h1>
+                <a href="https://pablo-kennediy.github.io/nectar/">
+                    <button>
+                        Nectar
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                    <button>
+                        Netflix
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/">
+                    <button>
+                        Duarte & Santos
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Homem-Arranha/">
+                    <button>
+                        Homem-Arranha
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/">
+                    <button>
+                        HOME PK DIGITAL PRODUCTS 1.0.4
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/">
+                    <button>
+                        Multiplanos
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Android_Site/">
+                    <button>
+                        Android
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                    <button>
+                        X
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
+                    <button>
+                        Instagram
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/">
+                    <button>
+                        Facebook
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/">
+                    <button>
+                        Google Glass
+                    </button>
+                </a>
+                <h1>
+                    Segue abaixo projetos que ainda estamos em processo de desenvolvimento.
+                </h1>
+                <a href="https://pablo-kennediy.github.io/Zap-Selling/">
+                    <button>
+                        Zap Selling
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Guia-do-Programador/">
+                    <button>
+                        Guia do Programador
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/MUAY-THAI/">
+                    <button>
+                        Muay Thai
+                    </button>
+                </a>
+                <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/">
+                    <button>
+                        Whatsapp Web
+                    </button>
+                </a>
                 <p style="color: red;">
                     <strong>ATENÇÃO !</strong>
                 </p>
@@ -54,7 +132,8 @@
                     para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
                 </p>
                 <p>
-                    Aqui você vai encontrar um grupo de <strong style="color: aquamarine;">Desenvolvedores, UI x UX</strong> e estrategistas de trafego <strong style="color: aquamarine;">organico</strong> e
+                    Aqui você vai encontrar um grupo de <strong style="color: aquamarine;">Desenvolvedores, UI x
+                        UX</strong> e estrategistas de trafego <strong style="color: aquamarine;">organico</strong> e
                     <strong style="color: aquamarine;">pago</strong> atuamos principalmente com a venda e revenda
                     de
                     scripts ou modelos.
