--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
             <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
                 <img style="border-radius: 15px;" src="digital.png" alt="digital">
             </a>
-            <legend>
-                Eu sou o NIKE
-            </legend>
+            <h1>
+                Eu sou o <strong style="color: aqua;">NIKE</strong>
+            </h1>
 
             <h1 style="margin-bottom: 50px;">
-                Sou fundador da PK DIGITAL PRODUCTS, empresa que usa um time brasileiro de Desenvolvedores de Sistemas para transformar ideias em 
+                Sou fundador da <strong style="color: aqua;">PK DIGITAL PRODUCTS</strong>
             </h1>
+            <h2>
+                Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong style="color: gold;">milhões</strong>
+            </h2>
             <section>
+        
+                <h1>
+                    Segue abaixo projeto que já foram finalizados e deixamos como referência para você
+                </h1>
                 <label style="color: rgb(255, 174, 0); font-size: x-small;">
                     RESUMINDO
                     (CRIAMOS PLATAFORMAS PARA
                     INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                     CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
                 </label>
-                <h1>
-                    Segue abaixo projeto que já foram finalizados e deixamos como referência para você
-                </h1>
                 <a href="https://pablo-kennediy.github.io/nectar/">
                     <button>
                         Nectar
