--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section>
         
                 <h1>
-                    Segue abaixo projeto que já foram finalizados e deixamos como referência para você
+                    Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência para você
                 </h1>
                 <label style="color: rgb(255, 174, 0); font-size: x-small;">
                     RESUMINDO
@@ -94,7 +94,7 @@
                     </button>
                 </a>
                 <h1>
-                    Segue abaixo projetos que ainda estamos em processo de desenvolvimento.
+                    Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
                 </h1>
                 <a href="https://pablo-kennediy.github.io/Zap-Selling/">
                     <button>
