--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                 <img style="border-radius: 15px;" src="digital.png" alt="digital">
             </a>
             <h1>
-                Eu sou o <strong style="color: aqua;">NIKE</strong>
+                Eu sou o <strong style="color: gold;">NIKE</strong>
             </h1>
 
             <h1 style="margin-bottom: 50px;">
-                Sou fundador da <strong style="color: aqua;">PK DIGITAL PRODUCTS</strong>
+                Sou fundador da <strong style="color:gold;">PK DIGITAL PRODUCTS</strong>
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong style="color: gold;">milhões</strong>
@@ -44,11 +44,11 @@
                         Nectar
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
+                <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
                     </button>
-                </a>
+                </a> -->
                 <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/">
                     <button>
                         Duarte & Santos
@@ -79,11 +79,11 @@
                         X
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
+                <!-- <a href="https://pablo-kennediy.github.io/Instagram_pk_produtos/">
                     <button>
                         Instagram
                     </button>
-                </a>
+                </a> -->
                 <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/">
                     <button>
                         Facebook
@@ -127,19 +127,10 @@
                     Clique <button type="button" id="ixd01"> <a href="#form"> aqui</a></button> para acessar ao <strong
                         style="color: gold;">formulario</strong> de inscrição.
                 </p>
-                <p>
-                    Clique
-                    <button type="button" id="ixd01">
-                        <a href="https://iplis.ru/meu-portifolio">
-                            aqui
-                        </a>
-                    </button>
-                    para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
-                </p>
-                <p>
-                    Aqui você vai encontrar um grupo de <strong style="color: aquamarine;">Desenvolvedores, UI x
-                        UX</strong> e estrategistas de trafego <strong style="color: aquamarine;">organico</strong> e
-                    <strong style="color: aquamarine;">pago</strong> atuamos principalmente com a venda e revenda
+                                <p>
+                    Aqui você vai encontrar um grupo de <strong style="color:gold;">Desenvolvedores, UI x
+                        UX</strong> e estrategistas de trafego <strong style="color: gold;">organico</strong> e
+                    <strong style="color:gold;">pago</strong> atuamos principalmente com a venda e revenda
                     de
                     scripts ou modelos.
                 </p>
@@ -155,6 +146,15 @@
                     </strong>
                 </h1>
             </section>
+             <p>
+                    Clique
+                    <button type="button" id="ixd01">
+                        <a href="https://iplis.ru/meu-portifolio">
+                            aqui
+                        </a>
+                    </button>
+                    para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
+                </p>
 
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
