--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <footer>
 
             <p>
-                Desenvolvido por <a href="https://www.instagram.com/euu_pabloo/">Nike</a> usando linguagens de marcação
+                Desenvolvido por <a href="https://www.instagram.com/nike_developer/">Nike</a> usando linguagens de marcação
                 para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
                     Digitais</a>
             </p>
