--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="digital.png" type="image/x-icon">
+<link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
     <title>Portifolio</title>
 </head>
 
 <body>
     <div class="interface">
+    <a href="https://www.instagram.com/pk_digital_products/" target="_blank"><strong style="color:gold;">PK DIGITAL PRODUCTS</strong></a>
+    <img src="iconsMoon.png" alt="">
         <main>
-            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank">
-                <img style="border-radius: 15px;" src="digital.png" alt="digital">
-            </a>
+            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank"><img style="border-radius: 15px;" src="digital.png" alt="digital"></a>    
             <h1>
                 Eu sou o <strong style="color: gold;">NIKE</strong>
             </h1>
 
             <h1 style="margin-bottom: 50px;">
-                Sou fundador da <strong style="color:gold;">PK DIGITAL PRODUCTS</strong>
+                Sou fundador de uma empresa referência em desenvolvimento de
+                PROJETOS DE SOFTWARE
             </h1>
             <h2>
                 Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong style="color: gold;">milhões</strong>
             </h2>
-            <section>
-        
+            <section>        
                 <h1>
                     Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência para você
                 </h1>
@@ -39,7 +39,7 @@
                     INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                     CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
                 </label>
-                <a href="https://pablo-kennediy.github.io/nectar/">
+                <a href="https://pablo-kennediy.github.io/nectar/" target="_blank">
                     <button>
                         Nectar
                     </button>
@@ -49,32 +49,32 @@
                         Netflix
                     </button>
                 </a> -->
-                <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/">
+                <a href="https://pablo-kennediy.github.io/Guilhermer-ADV/" target="_blank">
                     <button>
                         Duarte & Santos
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Homem-Arranha/">
+                <a href="https://pablo-kennediy.github.io/Homem-Arranha/" target="_blank">
                     <button>
                         Homem-Arranha
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/">
+                <a href="https://pablo-kennediy.github.io/Um-projeto-Elegante/" target="_blank">
                     <button>
                         HOME PK DIGITAL PRODUCTS 1.0.4
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/">
+                <a href="https://pablo-kennediy.github.io/PK-Produtos-Digitais-from-Multiplanos/" target="_blank">
                     <button>
                         Multiplanos
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Android_Site/">
+                <a href="https://pablo-kennediy.github.io/Android_Site/" target="_blank">
                     <button>
                         Android
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/">
+                <a href="https://pablo-kennediy.github.io/twitter-PK-Produtos/" target="_blank">
                     <button>
                         X
                     </button>
@@ -84,12 +84,12 @@
                         Instagram
                     </button>
                 </a> -->
-                <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/">
+                <a href="https://pablo-kennediy.github.io/Pk-Produtos---Facebook/" target="_blank">
                     <button>
                         Facebook
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/">
+                <a href="https://pablo-kennediy.github.io/GoogleGlass-pkProducoes/" target="_blank">
                     <button>
                         Google Glass
                     </button>
@@ -97,22 +97,22 @@
                 <h1>
                     Segue abaixo alguns dos milhares de projetos WEB que ainda estamos em processo de desenvolvimento.
                 </h1>
-                <a href="https://pablo-kennediy.github.io/Zap-Selling/">
+                <a href="https://pablo-kennediy.github.io/Zap-Selling/" target="_blank">
                     <button>
                         Zap Selling
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Guia-do-Programador/">
+                <a href="https://pablo-kennediy.github.io/Guia-do-Programador/" target="_blank">
                     <button>
                         Guia do Programador
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/MUAY-THAI/">
+                <a href="https://pablo-kennediy.github.io/MUAY-THAI/" target="_blank">
                     <button>
                         Muay Thai
                     </button>
                 </a>
-                <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/">
+                <a href="https://pablo-kennediy.github.io/Whatsapp_PK_Produtos/" target="_blank">
                     <button>
                         Whatsapp Web
                     </button>
@@ -124,7 +124,7 @@
                     Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
                 </p>
                 <p>
-                    Clique <button type="button" id="ixd01"> <a href="#form"> aqui</a></button> para acessar ao <strong
+                    Clique <button type="button" id="ixd01"> <a href="#form" target="_blank"> aqui</a></button> para acessar ao <strong
                         style="color: gold;">formulario</strong> de inscrição.
                 </p>
                                 <p>
@@ -139,7 +139,6 @@
                     computação e uma mistura de
                     engenharia social.
                 </p>
-
                 <h1 id="form">
                     <strong>
                         Aguardo ancioso para um entrevista.
@@ -149,27 +148,22 @@
              <p>
                     Clique
                     <button type="button" id="ixd01">
-                        <a href="https://iplis.ru/meu-portifolio">
+                        <a href="https://iplis.ru/meu-portifolio" target="_blank">
                             aqui
                         </a>
                     </button>
                     para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
                 </p>
-
             <iframe
                 src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
                 frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-
         </main>
-
         <footer>
-
             <p>
-                Desenvolvido por <a href="https://www.instagram.com/nike_developer/">Nike</a> usando linguagens de marcação
-                para a empresa <br> <a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
-                    Digitais</a>
+                Desenvolvido por <a href="https://www.instagram.com/nike_developer/" target="_blank">Nike</a> usando linguagens de marcação
+                para a empresa<a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
+                    Digitais <img src="iconsMoon.png" alt=""></a>
             </p>
-
         </footer>
     </div>
 </body>
