--- a/index.html
+++ b/index.html
@@ -8,16 +8,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="iconsMoon.png" type="image/x-icon">
     <title>Portifolio</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <a href="index.html">
+                    <li>
+                        HOME
+                    </li>
+                </a>
+                <a href="#iframe">
+                    <li>
+                        FORMULARIO DE INSCRIÇÃO
+                    </li>
+                </a>
+                <a href="https://iplis.ru/meu-portifolio">
+                    <li>
+                        PORTIFOLIO DEV.NIKE
+                    </li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+   
     <div class="interface">
-    <a href="https://www.instagram.com/pk_digital_products/" target="_blank"><strong style="color:gold;">PK DIGITAL PRODUCTS</strong></a>
-    <img src="iconsMoon.png" alt="">
-        <main>
-            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank"><img style="border-radius: 15px;" src="digital.png" alt="digital"></a>    
+        <picture id="moon">
+            <a href="https://www.instagram.com/pk_digital_products/" target="_blank">
+                <img src="iconsMoon.png" alt="">
+            </a>
+        </picture>
+        <section>
             <h1>
                 Eu sou o <strong style="color: gold;">NIKE</strong>
             </h1>
@@ -26,11 +50,14 @@
                 PROJETOS DE SOFTWARE
             </h1>
             <h2>
-                Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong style="color: gold;">milhões</strong>
+                Empresa que usa um time <picture id="br"><img src="brasil.png" alt=""></picture> brasileiro de
+                Desenvolvedores de <strong style="color: gold;">Sistemas</strong> para transformar centavos em <strong
+                    style="color: gold;">milhões</strong>
             </h2>
-            <section>        
+            <section>
                 <h1>
-                    Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência para você
+                    Segue abaixo alguns dos milhares de projetos WEB que já foram finalizados e deixamos como referência
+                    para você
                 </h1>
                 <label style="color: rgb(255, 174, 0); font-size: x-small;">
                     RESUMINDO
@@ -38,11 +65,6 @@
                     INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR DESING PARA LOGOS,
                     CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
                 </label>
-                <a href="https://pablo-kennediy.github.io/nectar/" target="_blank">
-                    <button>
-                        Nectar
-                    </button>
-                </a>
                 <!-- <a href="https://pablo-kennediy.github.io/Netflix_PK-Products/">
                     <button>
                         Netflix
@@ -123,10 +145,16 @@
                     Logo abaixo vamos deixar um formulario para você solicitar algum serviço conosco.
                 </p>
                 <p>
-                    Clique <button type="button" id="ixd01"> <a href="#form" target="_blank"> aqui</a></button> para acessar ao <strong
-                        style="color: gold;">formulario</strong> de inscrição.
+                    Clique
+                    <a href="#form" target="_blank">
+                        <button type="button" id="ixd01">
+                        aqui
+
+                    </button>
+                    </a> para
+                    acessar ao <strong style="color: gold;">formulario</strong> de inscrição.
                 </p>
-                                <p>
+                <p>
                     Aqui você vai encontrar um grupo de <strong style="color:gold;">Desenvolvedores, UI x
                         UX</strong> e estrategistas de trafego <strong style="color: gold;">organico</strong> e
                     <strong style="color:gold;">pago</strong> atuamos principalmente com a venda e revenda
@@ -144,27 +172,31 @@
                     </strong>
                 </h1>
             </section>
-             <p>
-                    Clique
-                    <button type="button" id="ixd01">
-                        <a href="https://iplis.ru/meu-portifolio" target="_blank">
-                            aqui
-                        </a>
-                    </button>
-                    para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
-                </p>
-            <iframe
+            <p>
+                Clique
+                <a href="https://iplis.ru/meu-portifolio" target="_blank">
+                <button type="button" id="ixd01">
+                                            aqui
+                                    </button>
+            </a>
+                para ter mais informações do nosso <strong style="color: gold;">Portifolio</strong>
+            </p>
+            <a id="digital" href="https://www.instagram.com/pk_digital_products/" target="_blank"><img
+                    style="border-radius: 15px;" src="digital.png" alt="digital"></a>
+            <iframe id="iframe"
                 src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
                 frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-        </main>
-        <footer>
-            <p>
-                Desenvolvido por <a href="https://www.instagram.com/nike_developer/" target="_blank">Nike</a> usando linguagens de marcação
-                para a empresa<a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
-                    Digitais <img src="iconsMoon.png" alt=""></a>
-            </p>
-        </footer>
+        </section>
     </div>
+
+    <footer>
+        <p>
+            Desenvolvido por <a href="https://www.instagram.com/nike_developer/" target="_blank">Nike</a> usando
+            linguagens de marcação
+            para a empresa<a href="https://www.instagram.com/pk_digital_products/" target="_blank">PK Produtos
+                Digitais <img src="iconsMoon.png" alt=""></a>
+        </p>
+    </footer>
 </body>
 
 </html>
